Fixing shadows and layout issues

--- a/public/stylesheets/accent/main.css
+++ b/public/stylesheets/accent/main.css
@@ -355,17 +355,21 @@ img.User {
 	background: white;
 	border: none;
 	padding: 5px 10px;
-	box-shadow: 0px 2px 5px #888;
+	box-shadow: 0 0 16px rgba(0,0,0,0.2);
 }
 
-#MediaUploadSubmit{
+#MediaUploadSubmit, #MediaEditSubmit{
 	position: absolute;
 	bottom:10px;
 	right:20px;
 	background: white;
 	border: none;
 	padding: 5px 10px;
-	box-shadow: 0px 2px 5px #888;
+	box-shadow: 0 0 16px rgba(0,0,0,0.2);
+}
+
+.EditDescription {
+	padding:5px;
 }
 
 textarea.FormRowInput {
@@ -393,6 +397,10 @@ input.FormRowInput {
 	margin-top:10px;
 }
 
+.BackLink:hover {
+	cursor:pointer;
+}
+
 .EditLink {
 	position:absolute;
 	right:2%;
@@ -405,14 +413,14 @@ input.FormRowInput {
 
 .VideoTitle {
 	position:absolute;
-	left:40%;
+	left:350px;
 	top:5%;
 }
 
 .VideoDescription {
 	position:absolute;
-	left:40%;
-	top:15%;
+	left:350px;
+	top:17%;
 }
 
 .MediaItem {
@@ -421,7 +429,7 @@ input.FormRowInput {
 	height: 230px;
 	margin-top: 25px;
 	border: solid 1px #c0c0c0;
-	box-shadow: 3px 2px 5px #888;
+	box-shadow: 0 0 16px rgba(0,0,0,0.2);
 }
 
 .MediaItem a {
